# learn-rust-on-rails

crates/db/queries/: users.sql
crates/db/src/: lib.rs
crates/web-assets/: Cargo.toml
crates/web-pages/: Cargo.toml
crates/web-pages/src/: users.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: main.rs  new_user.rs
