[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio", "form"] }
db = { version = "0.1.0", path = "../db" }
dioxus = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
validator = { version = "0.15", features = ["derive"] }
web-assets = { version = "0.1.0", path = "../web-assets" }
web-pages = { version = "0.1.0", path = "../web-pages" }
